# sola

./: .gitignore  Cargo.toml
.codex/: 01-planning.md  02-architecture-review.md  03-validation.md  04-current-status.md  05-gemini-handover.md  README.md  worklog.md
.codex/plans/: 2026-04-24-typst-integration.md  2026-04-25-inline-math-and-cursor-hit-testing.md  2026-04-26-export-integration-finish.md  2026-04-26-export-integration.md  2026-04-26-file-operations-and-menus.md  2026-04-26-file-system-integration.md  2026-04-26-fix-deep-scan-hang.md  2026-04-26-fix-startup-hang.md  2026-04-26-fix-unresponsive-ui.md  2026-04-26-gpui-idiomatic-editor-refactor.md  2026-04-26-in-app-menu-bar.md  2026-04-26-in-window-menus.md  2026-04-26-inline-math-and-cursor-hit-testing.md  2026-04-26-input-modal.md  2026-04-26-io-loop-and-file-tree.md  2026-04-26-multi-tab-system.md  2026-04-26-outline-view.md  2026-04-26-preferences-and-ui-cleanup.md  2026-04-26-typora-menu-complete.md  2026-04-26-typora-menu.md  typst-todo.md
.codex/specs/: 2026-04-24-typst-integration-design.md
.superpowers/brainstorm/278649-1777341219/state/: events  (+1 more)
crates/sola-app/: Cargo.toml
crates/sola-app/src/: actions.rs  config.rs  editor_layout.rs  focused_editor.rs  lib.rs  project_panel.rs  shell.rs  workspace.rs  worktree.rs
crates/sola-core/: Cargo.toml
crates/sola-core/src/: lib.rs
crates/sola-document/: Cargo.toml
crates/sola-document/src/: highlighter.rs  lib.rs
crates/sola-export/: Cargo.toml
crates/sola-export/src/: lib.rs
crates/sola-theme/: Cargo.toml
crates/sola-theme/src/: lib.rs
crates/sola-typst/: Cargo.toml
crates/sola-typst/src/: lib.rs
design/: sola-architecture-design.md
src/: main.rs
(+8 files in other folders)
