[package]
name = "sola-app"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
ignore = "0.4.25"
notify = "8.2.0"
sola-core = { path = "../sola-core" }
sola-document = { path = "../sola-document" }
sola-theme = { path = "../sola-theme" }
sola-typst = { path = "../sola-typst" }
