[package]
name = "sola-app"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
dirs.workspace = true
toml.workspace = true
anyhow.workspace = true
ignore = "0.4.25"
notify = "8.2.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
pulldown-cmark.workspace = true
sola-core = { path = "../sola-core" }
sola-document = { path = "../sola-document" }
sola-export = { path = "../sola-export" }
sola-theme = { path = "../sola-theme" }
sola-typst = { path = "../sola-typst" }
tokio = { version = "1.52.1", features = ["sync"] }
